test/files/neg/bug779.check
bug779.scala:6: error: method method ast has return statement; needs result type
    override def ast = return null
                       ^
one error found
